fix nanbar home no collapse button

--- a/css/index.css
+++ b/css/index.css
@@ -144,12 +144,10 @@ footer a:visited{
 	list-style-type: none; /*Removes the bullets in a list*/
 	padding: 0;
 	margin: 0;
-	float: right;
 }
 
 .navBar ul li{
 	display: inline;
-	float: left;
 }
 
 .navBar ul li a{
@@ -169,9 +167,6 @@ footer a:visited{
 .navBar a:active{
 	color: rgb(247,255,251);
 }
-/*.navbar{
-	margin-bottom: 0px;
-}*/
 
 .aboutMe{
 	background-color: grey;
